--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -33,13 +33,14 @@ ipython-genutils==0.2.0
 ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.1.0
 jsonpickle==2.2.0
 jsonschema==4.6.0
 jupyter-client==7.3.4
 jupyter-core==4.10.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.0
-kiwisolver==1.4.2
+kiwisolver==1.4.3
 MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
@@ -49,6 +50,7 @@ nbconvert==6.5.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
 networkx==2.8.4
+nltk==3.7
 notebook==6.4.12
 numpy==1.22.4
 packaging==21.3
@@ -58,6 +60,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
+plotly==5.9.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 protobuf==3.20.1
@@ -77,20 +80,27 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pyvis==0.2.1
 pyzmq==23.1.0
+regex==2022.6.2
 requests==2.28.0
 rich==12.4.4
+scikit-learn==1.1.1
+scipy==1.8.1
 semver==2.13.0
 Send2Trash==1.8.0
 six==1.16.0
+sklearn==0.0
 smmap==5.0.0
 soupsieve==2.3.2.post1
 stack-data==0.3.0
 streamlit==1.10.0
+tenacity==8.0.1
 terminado==0.15.0
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 toml==0.10.2
 toolz==0.11.2
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.3.0
 typing-extensions==4.2.0
 tzdata==2022.1
@@ -101,4 +111,5 @@ watchdog==2.1.9
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
+wordcloud==1.8.1
 zipp==3.8.0
